ctre-phoenix6-sys/src/bindings.rs

#[test]
fn bindgen_test_layout__Mbstatet() {
    const UNINIT: ::std::mem::MaybeUninit<_Mbstatet> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_Mbstatet>(),
        8usize,
        concat!("Size of: ", stringify!(_Mbstatet))
    );
    assert_eq!(
        ::std::mem::align_of::<_Mbstatet>(),
        4usize,
        concat!("Alignment of ", stringify!(_Mbstatet))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._Wchar) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_Mbstatet),
            "::",
            stringify!(_Wchar)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._Byte) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(_Mbstatet),
            "::",
            stringify!(_Byte)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._State) as usize - ptr as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(_Mbstatet),
            "::",
            stringify!(_State)
        )
    );
}
pub type mbstate_t = _Mbstatet;
pub type time_t = __time64_t;
pub type rsize_t = usize;
extern "C" {
    pub fn _errno() -> *mut ::std::os::raw::c_int;
}
extern "C" {
    pub fn _set_errno(_Value: ::std::os::raw::c_int) -> errno_t;
}
extern "C" {
    pub fn _get_errno(_Value: *mut ::std::os::raw::c_int) -> errno_t;
}
extern "C" {
    pub fn __threadid() -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn __threadhandle() -> usize;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_double(
        spn: ::std::os::raw::c_int,
        value: f64,
        str_: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_double_no_malloc(
        spn: ::std::os::raw::c_int,
        value: f64,
        str_: *mut ::std::os::raw::c_char,
        max_len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_int(
        spn: ::std::os::raw::c_int,
        value: ::std::os::raw::c_int,
        str_: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_int_no_malloc(
        spn: ::std::os::raw::c_int,
        value: ::std::os::raw::c_int,
        str_: *mut ::std::os::raw::c_char,
        max_len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_bool(
        spn: ::std::os::raw::c_int,
        value: bool,
        str_: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_bool_no_malloc(
        spn: ::std::os::raw::c_int,
        value: bool,
        str_: *mut ::std::os::raw::c_char,
        max_len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_pgn(
        spn: ::std::os::raw::c_int,
        frame_index: u16,
        framePeriodMs: u16,
        str_: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_serialize_pgn_no_malloc(
        spn: ::std::os::raw::c_int,
        frame_index: u16,
        framePeriodMs: u16,
        str_: *mut ::std::os::raw::c_char,
        max_len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_deserialize_double(
        spn: ::std::os::raw::c_int,
        str_: *const ::std::os::raw::c_char,
        strlen: u32,
        val: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_deserialize_int(
        spn: ::std::os::raw::c_int,
        str_: *const ::std::os::raw::c_char,
        strlen: u32,
        val: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_deserialize_bool(
        spn: ::std::os::raw::c_int,
        str_: *const ::std::os::raw::c_char,
        strlen: u32,
        val: *mut bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_deserialize_pgn(
        spn: ::std::os::raw::c_int,
        str_: *const ::std::os::raw::c_char,
        strlen: u32,
        frame_index: *mut u16,
        framePeriodMs: *mut u16,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_free_memory(str_: *mut *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn c_ctre_phoenix6_requestConfigApply(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        timeoutSeconds: f64,
        str_: *const ::std::os::raw::c_char,
        strlen: u32,
        forceApply: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlEmpty(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDutyCycleOut(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Output: f64,
        EnableFOC: bool,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Output: f64,
        MaxAbsDutyCycle: f64,
        Deadband: f64,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlVoltageOut(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Output: f64,
        EnableFOC: bool,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlPositionDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlPositionVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlPositionTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlVelocityDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlVelocityVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlVelocityTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetOutput: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetOutput: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialPositionDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetPosition: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
